--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,20 +7,47 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <div class="row">
+    <div class="col-md-2">gg</div>
+    <div class="col-md-8">
 
-<div class="jumbotron">
-<span class="name">Lara Finnegan</span>
-<div class="btn-group" role="group" aria-label="label">
-<button type="button" class="btn btn-default">About</button>
-  <button type="button" class="btn btn-default">Blog</button>
-  <button type="button" class="btn btn-default">Projects</button>
-  <button type="button" class="btn btn-default">Resume</button>
-  <button type="button" class="btn btn-default">Contact</button>
-</div>
- <div class="container">
-<%= yield %>
-</div>
-</div>
+      <nav class="navbar navbar-default">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="#">Lara Finnegan</a>
+        </div>
 
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </nav>
+
+      <div class="container-fluid">
+        <%= yield %>
+      </div><!-- /.container-fluid -->
+    </div><!-- /8 row colum-->
+    <div class="col-md-2">gg</div>
+  </div><!-- /row-->
+
+  <nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container">
+    <ul class="nav navbar-nav navbar-right">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Link</a></li>
+            <li><a href="#">Link</a></li>
+          </ul>
+  </div>
+</nav>
 </body>
 </html>
