--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,43 +8,24 @@
 //= require_tree .
 //= require_self
 
-.jumbotron {
-    background: url('/assets/background4.png');
-    background-size: 100%;
-    height: 400px;
-    box-shadow:  0px 4px 6px gray;
+.navbar-brand,
+.navbar-nav li a {
+    padding-top:140px;
 }
 
-.btn-group {
-  float:  right;
-}
-
-.btn-default {
-  color: white;
-  background-color: transparent;
-  border-radius: 0;
+.navbar {
+  background: transparent;
   border: none;
-  margin-top: -20px;
-  margin-left: 10px;
-  margin-right: 10px;
 }
 
-  .btn-default:hover, .btn-default:focus, .btn-default:active, .btn-default.active {
-    background:rgba(255,255,255,0.3);
-    color: white;
- }
+.col-md-2, .col-md-8, .col-md-6, .col-md-1 {
+  border: 1px solid black;
+}
 
- .name {
-    color: white;
-    font-size: 35px;
-    font-weight: bold;
-    float: left;
-    font: Arial;
- }
+.main-greeting {
+  font: 40px solid gray;
+}
 
- .mainlinks {
-    width: 70%;
-    margin-top: 450px;
-    margin-left: auto;
-    margin-right: auto;
- }
+.smaller-greeting {
+  font: 20px solid gray;
+}
