--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,31 +1,30 @@
-<div class="mainlinks">
-<div class="row">
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <div class="caption">
-        <h3>About</h3>
-        <p>text goes here</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
+
+    <div class="row">
+      <div class="col-md-6">Level 2
+      <%= image_tag("background8.png", class: "img-responsive img-circle") %>
+      <br/>
+        <br/>
+        <br/>
+      </div>
+      <div class="col-md-6">Level 2
+      <p class="main-greeting">Hello,</p>
+      <p class="smaller-greeting">A bit about me...</p>
+      <div class="row">
+        <div class="col-md-4 circle">
+          <%= image_tag("background8.png", class: "img-responsive img-circle") %>
+        </div>
+        <div class="col-md-4 circle">
+          <%= image_tag("background8.png", class: "img-responsive img-circle") %>
+        </div>
+        <div class="col-md-4 circle">
+          <%= image_tag("background8.png", class: "img-responsive img-circle") %>
+          </div>
+        </div>
+        blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
+        <br/>
+        <br/>
+        <br/>
+        <br/>
+        <br/>
       </div>
     </div>
-  </div>
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <div class="caption">
-        <h3>Blog</h3>
-        <p>text goes here</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-      </div>
-    </div>
-  </div>
-  <div class="col-sm-6 col-md-4">
-    <div class="thumbnail">
-      <div class="caption">
-        <h3>Projects</h3>
-        <p>text goes here</p>
-        <p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default" role="button">Button</a></p>
-      </div>
-    </div>
-  </div>
-</div>
-</div>
