removed extra column

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,7 @@
 </head>
 <body>
   <div class="row">
-    <div class="col-md-2">gg</div>
-    <div class="col-md-8">
-
+    <div class="col-md-8 col-md-offset-2">
       <nav class="navbar navbar-default">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -37,8 +35,6 @@
         <%= yield %>
       </div><!-- /.container-fluid -->
     </div><!-- /8 row colum-->
-    <div class="col-md-2">gg</div>
-  </div><!-- /row-->
 
   <nav class="navbar navbar-default navbar-fixed-bottom">
   <div class="container">
