updated circle classes

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,13 +10,13 @@
       <p class="main-greeting">Hello,</p>
       <p class="smaller-greeting">A bit about me...</p>
       <div class="row">
-        <div class="col-md-4 circle">
+        <div class="col-md-4 col-xs-4 col-sm-4 col-lg-4 circle">
           <%= image_tag("background8.png", class: "img-responsive img-circle") %>
         </div>
-        <div class="col-md-4 circle">
+        <div class="col-md-4 col-xs-4 col-sm-4 col-lg-4 circle">
           <%= image_tag("background8.png", class: "img-responsive img-circle") %>
         </div>
-        <div class="col-md-4 circle">
+        <div class="col-md-4 col-xs-4 col-sm-4 col-lg-4 circle">
           <%= image_tag("background8.png", class: "img-responsive img-circle") %>
           </div>
         </div>
