--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,30 +1,33 @@
-
-    <div class="row">
-      <div class="col-md-6">Level 2
-      <%= image_tag("background8.png", class: "img-responsive img-circle") %>
-      <br/>
-        <br/>
-        <br/>
-      </div>
-      <div class="col-md-6">Level 2
-      <p class="main-greeting">Hello,</p>
-      <p class="smaller-greeting">A bit about me...</p>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2">
       <div class="row">
-        <div class="col-md-4 col-xs-4 col-sm-4 col-lg-4 circle">
+        <div class="col-md-6">Level 2
           <%= image_tag("background8.png", class: "img-responsive img-circle") %>
+          <br/>
+          <br/>
+          <br/>
         </div>
-        <div class="col-md-4 col-xs-4 col-sm-4 col-lg-4 circle">
-          <%= image_tag("background8.png", class: "img-responsive img-circle") %>
-        </div>
-        <div class="col-md-4 col-xs-4 col-sm-4 col-lg-4 circle">
-          <%= image_tag("background8.png", class: "img-responsive img-circle") %>
+        <div class="col-md-6">Level 2
+          <p class="main-greeting">Hello,</p>
+          <p class="smaller-greeting">A bit about me...</p>
+          <div class="row">
+            <div class="col-md-4 col-xs-4 col-sm-4 col-lg-4 circle">
+              <%= image_tag("background8.png", class: "img-responsive img-circle") %>
+            </div>
+            <div class="col-md-4 col-xs-4 col-sm-4 col-lg-4 circle">
+              <%= image_tag("background8.png", class: "img-responsive img-circle") %>
+            </div>
+            <div class="col-md-4 col-xs-4 col-sm-4 col-lg-4 circle">
+              <%= image_tag("background8.png", class: "img-responsive img-circle") %>
+            </div>
           </div>
+          blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
+          <br/>
+          <br/>
+          <br/>
+          <br/>
+          <br/>
         </div>
-        blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
-        <br/>
-        <br/>
-        <br/>
-        <br/>
-        <br/>
       </div>
     </div>
+  </div>
