--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
   </head>
 <body>
   <nav class="navbar navbar-default">
+    <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
         <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
@@ -27,6 +28,7 @@
           <li><a href="#">Link</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
+      </div>
     </nav>
 
     <div class="container-fluid">
@@ -34,7 +36,7 @@
     </div><!-- /.container-fluid -->
 
   <nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container">
+    <div class="container-fluid">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Home</a></li>
         <li><a href="#">Link</a></li>
