added some more formatting

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,16 +1,74 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+.navbar {
+  background: transparent;
+  border: none;
+  padding-top: 60px;
+}
 
-
-.col-md-2, .col-md-8, .col-md-6, .col-md-1 {
+.col-md-2, .col-md-8, .col-md-6, .col-md-1, .col-md-4, .col-md-3, .col-md-5, .col-md-12 {
   border: 1px solid black;
 }
 
 .main-greeting {
-  font: 40px solid gray;
+  font: 1em solid gray;
 }
 
 .smaller-greeting {
   font: 20px solid gray;
+}
+
+@media (max-width: 978px){
+  .navbar-nav li{
+    text-align: center;
+    
+  }
+  .navbar {
+    padding: 0px;
+  }
+  .small {
+  width: 84%;
+  height: 84%;
+  margin: auto;
+}
+
+.three {
+  padding-bottom: 5%;
+}
+
+}
+
+.dynamicheight {
+  float: left;
+  width: 33.33%;
+  background-color: red;
+  border: 1px solid black;
+  border-radius: 50%;
+  text-align: center;
+  vertical-align: middle;
+
+}
+
+.circletext {
+  border: 1px solid black;
+}
+
+
+
+.main-img {
+  width: 90%;
+  height: 90%;
+  margin: auto;
+}
+
+@media (min-width: 979px){
+.nopadding {
+   padding: 0 !important;
+   margin: 0 !important;
+   }
+
+   .circle1 {
+   margin-left: 0;
+   }
 }
