--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,33 +1,44 @@
-  <div class="row">
-    <div class="col-md-8 col-md-offset-2">
-      <div class="row">
-        <div class="col-md-6">Level 2
-          <%= image_tag("background8.png", class: "img-responsive img-circle") %>
-          <br/>
-          <br/>
-          <br/>
-        </div>
-        <div class="col-md-6">Level 2
-          <p class="main-greeting">Hello,</p>
-          <p class="smaller-greeting">A bit about me...</p>
-          <div class="row">
-            <div class="col-md-4 col-xs-4 col-sm-4 col-lg-4 circle">
-              <%= image_tag("background8.png", class: "img-responsive img-circle") %>
+<div class="row">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="row">
+      
+      <div class="col-md-6 col-md-push-6 colunm1">
+        <p class="main-greeting">Hello,</p>
+        <p class="smaller-greeting">A bit about me...</p>
+        <div class="row three">
+          <div class="col-md-12 col-xs-12 nopadding">
+            <div class="circle circle1 dynamicheight">
+                text
             </div>
-            <div class="col-md-4 col-xs-4 col-sm-4 col-lg-4 circle">
-              <%= image_tag("background8.png", class: "img-responsive img-circle") %>
+            <div class="circle dynamicheight">
+              <div class="circletext">Text</div >
             </div>
-            <div class="col-md-4 col-xs-4 col-sm-4 col-lg-4 circle">
-              <%= image_tag("background8.png", class: "img-responsive img-circle") %>
+            <div class="circle dynamicheight">
+              <div class="circletext">Text</div >
             </div>
           </div>
-          blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
-          <br/>
-          <br/>
-          <br/>
-          <br/>
-          <br/>
+        </div><!-- end 3 circles -->
+        <div class="hidden-sm hidden-xs visible-md visible-lg">
+            blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
+        </div>
+      </div><!-- end second column -->
+      <div class="col-md-6 col-md-pull-6">
+        <div>
+            <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
+        </div>
+      </div>
+    </div><!-- end row -->
+  </div><!-- end outer column -->
+</div><!-- end outer row -->
+
+<div class="row visible-sm visible-xs hidden-md hidden-lg">
+  <div class="col-md-10 col-md-offset-1">
+    <div class="row">
+      <div class="col-md-6 col-md-offset-6">
+        <div>
+            blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
         </div>
       </div>
     </div>
   </div>
+</div>
