--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -4,62 +4,90 @@
 .navbar {
   background: transparent;
   border: none;
-  padding-top: 60px;
+  padding-top: 10%;
 }
 
-.col-md-2, .col-md-8, .col-md-6, .col-md-1, .col-md-4, .col-md-3, .col-md-5, .col-md-12 {
-  border: 1px solid black;
+.navbar-brand {
+  font-weight: bold;
+  font-size: 2em;
+  color: gray;
+  font-family: 'Bitter', serif;
 }
 
 .main-greeting {
-  font: 1em solid gray;
+  font-size: 5em;
+  color: gray;
+  font-family: 'Bitter', serif;
+  font-weight: bold;
+  padding-top: 0 !important;
+  border: 1px solid black;
+  line-height: 0.5;
 }
 
 .smaller-greeting {
-  font: 20px solid gray;
+  font-size: 3.4em;
+  padding-top: 1%;
+  color: gray;
+  line-height: 1.7;
+  font-family: 'Bitter', serif;
+  border: 1px solid black;
 }
 
 @media (max-width: 978px){
   .navbar-nav li{
     text-align: center;
-    
   }
+
   .navbar {
     padding: 0px;
   }
-  .small {
-  width: 84%;
-  height: 84%;
-  margin: auto;
+
+.nopadding {
+    float: left;
+    position: relative;
+    left: 50%;
+}
+
+.circle {
+    float: left;
+    position: relative;
+    left: -50%;
 }
 
 .three {
   padding-bottom: 5%;
 }
 
+.little {
+  padding-top: 4%;
+}
 }
 
-.dynamicheight {
-  float: left;
-  width: 33.33%;
+.circle {
+  width: 26%;
   background-color: red;
   border: 1px solid black;
   border-radius: 50%;
   text-align: center;
   vertical-align: middle;
-
+  padding-top: 11%;
+  padding-bottom: 11%;
+  margin-right: 2.3%;
+  margin-left: 2.3%;
 }
 
 .circletext {
-  border: 1px solid black;
+  color: white;
 }
-
-
 
 .main-img {
   width: 90%;
   height: 90%;
   margin: auto;
+}
+
+  .outer {
+  padding-top: 5%;
 }
 
 @media (min-width: 979px){
@@ -68,7 +96,15 @@
    margin: 0 !important;
    }
 
+   .circle {
+      float: left;
+   }
+
    .circle1 {
-   margin-left: 0;
+      margin-left: 0px;
+   }
+
+   .big {
+      padding-top: 9%;
    }
 }
