--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,24 +1,23 @@
-<div class="row">
+<div class="row outer">
   <div class="col-md-10 col-md-offset-1">
     <div class="row">
-      
-      <div class="col-md-6 col-md-push-6 colunm1">
+      <div class="col-md-6 col-md-push-6">
         <p class="main-greeting">Hello,</p>
-        <p class="smaller-greeting">A bit about me...</p>
+        <p class="smaller-greeting">a bit about me...</p>
         <div class="row three">
           <div class="col-md-12 col-xs-12 nopadding">
-            <div class="circle circle1 dynamicheight">
-                text
+            <div class="circle circle1">
+                <div class="circletext">Text</div >
             </div>
-            <div class="circle dynamicheight">
+            <div class="circle">
               <div class="circletext">Text</div >
             </div>
-            <div class="circle dynamicheight">
+            <div class="circle">
               <div class="circletext">Text</div >
             </div>
           </div>
         </div><!-- end 3 circles -->
-        <div class="hidden-sm hidden-xs visible-md visible-lg">
+        <div class="hidden-sm hidden-xs visible-md visible-lg big">
             blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
         </div>
       </div><!-- end second column -->
@@ -34,7 +33,7 @@
 <div class="row visible-sm visible-xs hidden-md hidden-lg">
   <div class="col-md-10 col-md-offset-1">
     <div class="row">
-      <div class="col-md-6 col-md-offset-6">
+      <div class="col-md-6 col-md-offset-6 little">
         <div>
             blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
         </div>
