--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,15 +9,15 @@
             <div class="circle circle1">
                 <div class="circletext">Text</div >
             </div>
-            <div class="circle">
+            <div class="circle circle2">
               <div class="circletext">Text</div >
             </div>
-            <div class="circle">
+            <div class="circle circle3">
               <div class="circletext">Text</div >
             </div>
           </div>
         </div><!-- end 3 circles -->
-        <div class="hidden-sm hidden-xs visible-md visible-lg big">
+        <div class="hidden-sm hidden-xs visible-md visible-lg big about">
             blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
         </div>
       </div><!-- end second column -->
@@ -34,7 +34,7 @@
   <div class="col-md-10 col-md-offset-1">
     <div class="row">
       <div class="col-md-6 col-md-offset-6 little">
-        <div>
+        <div class="about">
             blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
         </div>
       </div>
