--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,36 +1,50 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
-.navbar {
+body {
+  background-color: #e0e0e0;
+}
+
+.navbar .top{
   background: transparent;
   border: none;
-  padding-top: 10%;
 }
 
 .navbar-brand {
   font-weight: bold;
-  font-size: 2em;
-  color: gray;
+  color: #606060;
   font-family: 'Bitter', serif;
+}
+
+.name {
+  font-size: 3em;
+  font-weight: bold;
+  font-family: 'Bitter', serif;
+  color: #606060;
+  line-height: 0.7;
 }
 
 .main-greeting {
   font-size: 5em;
-  color: gray;
+  color: #606060;
   font-family: 'Bitter', serif;
   font-weight: bold;
   padding-top: 0 !important;
-  border: 1px solid black;
-  line-height: 0.5;
+  line-height: 0.7;
 }
 
 .smaller-greeting {
   font-size: 3.4em;
   padding-top: 1%;
-  color: gray;
+  color: #606060;
   line-height: 1.7;
   font-family: 'Bitter', serif;
-  border: 1px solid black;
+}
+
+.about {
+  color: #606060;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.5em;
 }
 
 @media (max-width: 978px){
@@ -38,8 +52,15 @@
     text-align: center;
   }
 
-  .navbar {
-    padding: 0px;
+  .name {
+  margin-left: 0;
+  padding-left: 2%;
+  padding-top: 5%;
+  }
+
+  .navbar-brand {
+  margin-left: 0;
+  padding-left: 0;
   }
 
 .nopadding {
@@ -65,8 +86,6 @@
 
 .circle {
   width: 26%;
-  background-color: red;
-  border: 1px solid black;
   border-radius: 50%;
   text-align: center;
   vertical-align: middle;
@@ -74,10 +93,39 @@
   padding-bottom: 11%;
   margin-right: 2.3%;
   margin-left: 2.3%;
+  transition: border 0.4s ease 0s, background-color 0.4s ease 0s;
+  transition-property: border, background-color;
+  transition-duration:0.4s, 0.4s;
+  transition-timing-function: ease, ease;
+  transition-delay: 0s, 0s;
 }
 
 .circletext {
   color: white;
+}
+
+.circle1 {
+  background-color: rgba(232, 53, 86, 1);
+}
+
+.circle1:hover {
+  background-color: #a2253c;
+}
+
+.circle2 {
+  background-color: #61CFD3;
+}
+
+.circle2:hover {
+  background-color: #439093;
+}
+
+.circle3 {
+  background-color: rgba(209, 200, 37, 1);
+}
+
+.circle3:hover {
+  background-color: rgba(139, 133, 25, 1);
 }
 
 .main-img {
@@ -90,10 +138,28 @@
   padding-top: 5%;
 }
 
+.footer {
+  background-color: rgba(232, 53, 86, 1);
+  color: white;
+  border-top: 2px solid white;
+}
+
 @media (min-width: 979px){
 .nopadding {
    padding: 0 !important;
    margin: 0 !important;
+   }
+
+.top li a {
+    color: #C3BFBE;
+}
+
+   .top li a:hover {
+    color: #61CFD3;
+}
+
+   header{ 
+   padding-top: 8%;
    }
 
    .circle {
@@ -106,5 +172,13 @@
 
    .big {
       padding-top: 9%;
+   }
+
+   .outer {
+   padding-bottom: 6%;
+   }
+
+   .footer {
+   height: 100%;
    }
 }
