--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-  <div class="navbar navbar-default navbar-static-top">
+<header id="site-header">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-md-8 col-md-offset-2 name">
+      Lara Finnegan
+      </div>
+    </div>
+  </div>
+</header>
+  <div class="navbar navbar-static-top">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
@@ -25,8 +34,8 @@
           </div> <!-- end div class="navbar-header" -->
           
           <div class="collapse navbar-collapse">
-            <ul class="nav navbar-nav navbar-right">
-              <li><%= link_to "HOME" %></li>
+            <ul class="nav navbar-nav navbar-right top">
+              <li><%= link_to "HOME", '#' %></li>
               <li><%= link_to "LINK" %></li>
               <li><%= link_to "LINK" %></li>
             </ul>
@@ -41,12 +50,12 @@
     <%= yield %>
   </div><!-- /.container-fluid -->
 
-  <nav class="navbar navbar-default navbar-static-bottom">
-    <div class="container-fluid">
+  <nav class="navbar navbar-static-bottom footer">
+    <div class="container">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Link</a></li>
-        <li><a href="#">Link</a></li>
+        <li><%= link_to "Call" %><span class="glyphicon glyphicon-earphone"></span></li>
+        <li><%= link_to "Contact" %><span class="glyphicon glyphicon-envelope"></span></li>
+        <li><%= link_to "Social Media" %><span class="glyphicon glyphicon-plus"></span></li>
       </ul>
     </div>
   </nav>
