--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     </div>
   </div>
 </header>
-  <div class="navbar navbar-static-top">
+  <div class="navbar navbar-default navbar-static-top">
     <div class="container-fluid">
       <div class="row">
         <div class="col-md-8 col-md-offset-2">
