updated mobile styling

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 <header id="site-header">
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-8 col-md-offset-2 name">
+      <div class="col-xs-10 col-sm-10 col-md-8 col-md-offset-2 name">
       Lara Finnegan
       </div>
     </div>
