--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -47,20 +47,26 @@ body {
   line-height: 1.5em;
 }
 
+@screen-xs-max {
+    .name {
+  font-size: 2.5em;
+  }
+}
+
 @media (max-width: 978px){
   .navbar-nav li{
-    text-align: center;
+    text-align: left;
   }
+
+  .navbar-brand {
+  padding-left: 0 !important;
+  margin-left: 0 !important;
+}
 
   .name {
   margin-left: 0;
   padding-left: 2%;
   padding-top: 5%;
-  }
-
-  .navbar-brand {
-  margin-left: 0;
-  padding-left: 0;
   }
 
 .nopadding {
