--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="row outer">
   <div class="col-md-10 col-md-offset-1">
     <div class="row">
-      <div class="col-md-6 col-md-push-6">
+      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-push-6">
         <p class="main-greeting">Hello,</p>
         <p class="smaller-greeting">a bit about me...</p>
         <div class="row three">
