--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,8 +1,27 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 body {
   background-color: #e0e0e0;
+  height: 100%;
+  padding-bottom: 25%;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 25%;
+  background-color: rgba(232, 53, 86, 1);
+  border-top: 2px solid white;
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
 }
 
 .navbar-default {
@@ -144,12 +163,6 @@ body {
   padding-top: 5%;
 }
 
-.footer {
-  background-color: rgba(232, 53, 86, 1);
-  color: white;
-  border-top: 2px solid white;
-}
-
 @media (min-width: 979px){
 .nopadding {
    padding: 0 !important;
@@ -178,13 +191,5 @@ body {
 
    .big {
       padding-top: 9%;
-   }
-
-   .outer {
-   padding-bottom: 6%;
-   }
-
-   .footer {
-   height: 100%;
    }
 }
