added footer and social media links

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,15 @@
 <div class="row outer">
   <div class="col-md-10 col-md-offset-1">
+
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-push-6">
         <p class="main-greeting">Hello,</p>
         <p class="smaller-greeting">a bit about me...</p>
+        
         <div class="row three">
           <div class="col-md-12 col-xs-12 nopadding">
             <div class="circle circle1">
-                <div class="circletext">Text</div >
+              <div class="circletext">Text</div >
             </div>
             <div class="circle circle2">
               <div class="circletext">Text</div >
@@ -17,13 +19,49 @@
             </div>
           </div>
         </div><!-- end 3 circles -->
+              
         <div class="hidden-sm hidden-xs visible-md visible-lg big about">
             blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
         </div>
       </div><!-- end second column -->
+            
       <div class="col-md-6 col-md-pull-6">
-        <div>
-            <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
+        <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+
+                <!-- Wrapper for slides -->
+          <div class="carousel-inner" role="listbox">
+            <div class="item active">
+              <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
+              <div class="carousel-caption">
+                <h3>Chania</h3>
+                <p>Caption 1</p>
+              </div>
+            </div>
+
+            <div class="item">
+              <%= image_tag("background7.png", class: "img-responsive main-img img-circle") %>
+              <div class="carousel-caption">
+                <h3>Chania</h3>
+                <p>Caption 2</p>
+              </div>
+            </div>
+
+            <div class="item">
+              <%= image_tag("background6.png", class: "img-responsive main-img img-circle") %>
+              <div class="carousel-caption">
+                <h3>Chania</h3>
+                <p>Caption 1</p>
+              </div>
+            </div>
+
+            <div class="item">
+              <%= image_tag("background5.png", class: "img-responsive main-img img-circle") %>
+              <div class="carousel-caption">
+                <h3>Chania</h3>
+                <p>Caption 1</p>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div><!-- end row -->
@@ -35,7 +73,7 @@
     <div class="row">
       <div class="col-md-6 col-md-offset-6 little">
         <div class="about">
-            blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
+          blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
         </div>
       </div>
     </div>
