--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -12,17 +12,48 @@ body {
   padding-bottom: 25%;
 }
 
-.footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 25%;
-  background-color: rgba(232, 53, 86, 1);
-  border-top: 2px solid white;
-  margin-bottom: 0 !important;
-  padding-bottom: 0 !important;
+.outer {
+  padding-top: 5%;
 }
+
+/* carousel */
+
+.main-img {
+  width: 90%;
+  height: 90%;
+  margin: auto;
+}
+
+.carousel-fade {
+  .carousel-inner {
+    .item {
+      opacity: 0;
+      transition-property: opacity;
+    }
+
+    .active {
+      opacity: 1;
+    }
+
+    .active.left,
+    .active.right {
+      left: 0;
+      opacity: 0;
+      z-index: 1;
+    }
+
+    .next.left,
+    .prev.right {
+      opacity: 1;
+    }
+  }
+
+  .carousel-control {
+    z-index: 2;
+  }
+}
+
+/* header */
 
 .navbar-default {
   background: transparent;
@@ -43,6 +74,27 @@ body {
   line-height: 0.7;
 }
 
+
+/* footer */
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 25%;
+  background-color: rgba(232, 53, 86, 1);
+  border-top: 2px solid white;
+  margin-bottom: 0 !important;
+  padding-bottom: 0 !important;
+}
+
+.footer .navbar-nav > li > a {
+  color: white;
+}
+
+/* greeting and smaller circles */
+
 .main-greeting {
   font-size: 5em;
   color: #606060;
@@ -58,55 +110,6 @@ body {
   color: #606060;
   line-height: 1.7;
   font-family: 'Bitter', serif;
-}
-
-.about {
-  color: #606060;
-  font-family: 'Open Sans', sans-serif;
-  line-height: 1.5em;
-}
-
-@screen-xs-max {
-    .name {
-  font-size: 2.5em;
-  }
-}
-
-@media (max-width: 978px){
-  .navbar-nav li{
-    text-align: left;
-  }
-
-  .navbar-brand {
-  padding-left: 0 !important;
-  margin-left: 0 !important;
-}
-
-  .name {
-  margin-left: 0;
-  padding-left: 2%;
-  padding-top: 5%;
-  }
-
-.nopadding {
-    float: left;
-    position: relative;
-    left: 50%;
-}
-
-.circle {
-    float: left;
-    position: relative;
-    left: -50%;
-}
-
-.three {
-  padding-bottom: 5%;
-}
-
-.little {
-  padding-top: 4%;
-}
 }
 
 .circle {
@@ -153,43 +156,118 @@ body {
   background-color: rgba(139, 133, 25, 1);
 }
 
-.main-img {
-  width: 90%;
-  height: 90%;
-  margin: auto;
+.about {
+  color: #606060;
+  font-family: 'Open Sans', sans-serif;
+  line-height: 1.5em;
 }
 
-  .outer {
-  padding-top: 5%;
+/* small devices */
+
+@screen-xs-max {
+  .name {
+    font-size: 2.5em;
+  }
 }
+
+@media (max-width: 978px){
+  .navbar-nav li {
+    text-align: left;
+  }
+
+  .navbar-brand {
+    padding-left: 0 !important;
+    margin-left: 0 !important;
+  }
+
+  .name {
+    margin-left: 0;
+    padding-left: 2%;
+    padding-top: 5%;
+  }
+
+  .nopadding {
+    float: left;
+    position: relative;
+    left: 50%;
+  }
+
+  .circle {
+    float: left;
+    position: relative;
+    left: -50%;
+  }
+
+  .three {
+    padding-bottom: 5%;
+  }
+
+  .little {
+    padding-top: 4%;
+  }
+}
+
+/* larger devices */
 
 @media (min-width: 979px){
-.nopadding {
-   padding: 0 !important;
-   margin: 0 !important;
-   }
+  .nopadding {
+    padding: 0 !important;
+    margin: 0 !important;
+  }
 
-.top li a {
+  .navbar-default .navbar-nav > li > a {
     color: #C3BFBE;
-}
+  }
 
-   .top li a:hover {
+  .navbar-default .navbar-nav > li > a:hover {
     color: #61CFD3;
-}
+  }
 
-   header{ 
-   padding-top: 8%;
+  header{ 
+    padding-top: 8%;
+  }
+
+  .circle {
+    float: left;
+  }
+
+  .circle1 {
+    margin-left: 0px;
+  }
+
+  .big {
+    padding-top: 9%;
+  }
+
+
+
+  .footer > .container-fluid {
+      text-align: center;
+  }
+
+   .text {
+   text-align: left;
+   color: white;
+   font-size: 0.9em;
+   padding-top: 0.5%;
+   padding-left: 0 !important;
    }
 
-   .circle {
-      float: left;
+   .social-img {
+    float: left;
    }
 
-   .circle1 {
-      margin-left: 0px;
-   }
+  .glyphicon {
+    color: white;
+    font-size: 1.8em;
+    padding: 27%;
+    background-color: #61CFD3;
+    border-radius: 50%;
+    text-align: left;
+  }
 
-   .big {
-      padding-top: 9%;
-   }
+  .footer-main {
+    margin-top: 3%;
+  }
+ 
 }
