--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<header id="site-header">
-  <div class="container-fluid">
-    <div class="row">
-      <div class="col-xs-10 col-sm-10 col-md-8 col-md-offset-2 name">
-      Lara Finnegan
+  <header id="site-header">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-xs-10 col-sm-10 col-md-8 col-md-offset-2 name">
+          Lara Finnegan
+        </div>
       </div>
     </div>
-  </div>
-</header>
+  </header>
   <div class="navbar navbar-default navbar-static-top">
     <div class="container-fluid">
       <div class="row">
@@ -32,7 +32,7 @@
             </button>
             <a class="navbar-brand" href="#">Business Analyst | Web Developer</a>
           </div> <!-- end div class="navbar-header" -->
-          
+
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right top">
               <li><%= link_to "HOME", '#' %></li>
@@ -40,7 +40,7 @@
               <li><%= link_to "LINK" %></li>
             </ul>
           </div> <!-- end div class="collapse navbar-collapse" -->
-        
+
         </div> <!-- end of col-->
       </div><!-- end of row -->
     </div><!-- end div class="container" -->
@@ -50,14 +50,36 @@
     <%= yield %>
   </div><!-- /.container-fluid -->
 
-  <nav class="navbar navbar-static-bottom footer">
-    <div class="container">
-      <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "Call" %><span class="glyphicon glyphicon-earphone"></span></li>
-        <li><%= link_to "Contact" %><span class="glyphicon glyphicon-envelope"></span></li>
-        <li><%= link_to "Social Media" %><span class="glyphicon glyphicon-plus"></span></li>
-      </ul>
-    </div>
-  </nav>
+  <div class="footer">
+    <div class="container-fluid">
+      <div class="row footer-main">
+        <div class="col-md-8 col-md-offset-2">
+          <div class="row">
+            <div class="col-md-1">
+              <span class="glyphicon glyphicon-earphone"></span>
+            </div>
+            <div class="col-md-2 text"><b>Call</b><br/>T: 207-504-6930</div>
+            <div class="col-md-1">
+              <span class="glyphicon glyphicon-envelope"></span>
+            </div>
+            <div class="col-md-2 text"><b>Contact</b><br/>lcfinnegan@gmail.com</div>
+            <div class="col-md-1">
+              <span class="glyphicon glyphicon-plus"></span>
+            </div>
+            <div class="col-md-2 text"><b>Social Media</b><br/>
+                <%= link_to image_tag("Linkedin.png", class: "img-responsive social-img"), "https://www.linkedin.com/in/larafinnegan", target: "_blank"  %>
+                <%= link_to image_tag("Github.png", class: "img-responsive social-img"), "https://github.com/larafinnegan", target: "_blank" %>
+                <%= link_to image_tag("Facebook.png", class: "img-responsive social-img"), "https://www.facebook.com/larafinnegan", target: "_blank" %>
+                <%= link_to image_tag("Googleplus.png", class: "img-responsive social-img"), "https://plus.google.com/u/0/+LaraFinnegan/posts", target: "_blank" %>
+                </div>
+            <div class="col-md-1">
+              <span class="glyphicon glyphicon-plus"></span>
+            </div>
+            <div class="col-md-2 text">© 2015 by Lara Finnegan</div>
+          </div>
+        </div>
+        </div>
+        </div>
+        </div>
 </body>
 </html>
