--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -25,7 +25,7 @@
         </div>
       </div><!-- end second column -->
             
-      <div class="col-md-6 col-md-pull-6">
+      <div class="col-md-6 col-md-pull-6 big-circle">
         <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
 
                 <!-- Wrapper for slides -->
@@ -62,20 +62,11 @@
               </div>
             </div>
           </div>
+        </div><!-- end carousel-->
+        <div class="about visible-sm visible-xs hidden-md hidden-lg">
+          blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
         </div>
       </div>
     </div><!-- end row -->
   </div><!-- end outer column -->
 </div><!-- end outer row -->
-
-<div class="row visible-sm visible-xs hidden-md hidden-lg">
-  <div class="col-md-10 col-md-offset-1">
-    <div class="row">
-      <div class="col-md-6 col-md-offset-6 little">
-        <div class="about">
-          blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
