--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,7 +9,7 @@ html {
 body {
   background-color: #e0e0e0;
   height: 100%;
-  padding-bottom: 25%;
+  padding-bottom: 15%;
 }
 
 .outer {
@@ -82,16 +82,26 @@ body {
   bottom: 0;
   left: 0;
   width: 100%;
-  height: 25%;
+  height: 15%;
   background-color: rgba(232, 53, 86, 1);
   border-top: 2px solid white;
   margin-bottom: 0 !important;
   padding-bottom: 0 !important;
 }
 
-.footer .navbar-nav > li > a {
-  color: white;
-}
+ .text {
+   text-align: left;
+   color: white;
+   font-size: 0.9em;
+  }
+
+  .social-img {
+    float: left;
+   }
+
+    .glyphicon {
+    color: white;
+  }
 
 /* greeting and smaller circles */
 
@@ -162,6 +172,7 @@ body {
   line-height: 1.5em;
 }
 
+
 /* small devices */
 
 @screen-xs-max {
@@ -173,6 +184,12 @@ body {
 @media (max-width: 978px){
   .navbar-nav li {
     text-align: left;
+    border: 1px solid white;
+    background-color: #C3BFBE;;
+  }
+
+  .navbar-default .navbar-nav > li > a {
+    color: white;
   }
 
   .navbar-brand {
@@ -202,8 +219,19 @@ body {
     padding-bottom: 5%;
   }
 
-  .little {
-    padding-top: 4%;
+  .about {
+    padding-top: 3%;
+    padding-bottom: 6%;
+    margin-right: 2%;
+    margin-left: 2%;
+  }
+
+  .big-circle {
+    padding-bottom: 10%;
+  }
+
+  .footer-main {
+    margin-top: 3%;
   }
 }
 
@@ -239,31 +267,17 @@ body {
     padding-top: 9%;
   }
 
-
-
-  .footer > .container-fluid {
-      text-align: center;
-  }
-
    .text {
-   text-align: left;
-   color: white;
-   font-size: 0.9em;
    padding-top: 0.5%;
    padding-left: 0 !important;
    }
 
-   .social-img {
-    float: left;
-   }
-
   .glyphicon {
-    color: white;
     font-size: 1.8em;
-    padding: 27%;
+    padding: 18%;
     background-color: #61CFD3;
     border-radius: 50%;
-    text-align: left;
+    text-align: right;
   }
 
   .footer-main {
