--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,19 +9,19 @@
         <div class="row three">
           <div class="col-md-12 col-xs-12 nopadding">
             <div class="circle circle1">
-              <div class="circletext">Text</div >
+              <div class="circletext">ABOUT ME</div >
             </div>
             <div class="circle circle2">
-              <div class="circletext">Text</div >
+              <div class="circletext">MY BLOG</div >
             </div>
             <div class="circle circle3">
-              <div class="circletext">Text</div >
+              <div class="circletext">MY PROJECTS</div >
             </div>
           </div>
         </div><!-- end 3 circles -->
               
         <div class="hidden-sm hidden-xs visible-md visible-lg big about">
-            blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
+            blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
         </div>
       </div><!-- end second column -->
             
@@ -64,7 +64,7 @@
           </div>
         </div><!-- end carousel-->
         <div class="about visible-sm visible-xs hidden-md hidden-lg">
-          blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
+          blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
         </div>
       </div>
     </div><!-- end row -->
