--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -185,6 +185,10 @@ body {
     font-size: 2em;
   }
 
+  .navbar-brand {
+    font-size: 0.7em;
+  }
+
   .main-greeting {
   font-size: 4.5em;
 }
@@ -225,7 +229,7 @@ body {
   .circle {
     float: left;
     position: relative;
-    left: -49%;
+    left: -50%;
   }
 
   .three {
