--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -9,13 +9,13 @@
         <div class="row three">
           <div class="col-md-12 col-xs-12 nopadding">
             <div class="circle circle1">
-              <div class="circletext">ABOUT ME</div >
+              <div class="circletext">ABOUT</div >
             </div>
             <div class="circle circle2">
-              <div class="circletext">MY BLOG</div >
+              <div class="circletext">BLOG</div >
             </div>
             <div class="circle circle3">
-              <div class="circletext">MY PROJECTS</div >
+              <div class="circletext">PROJECTS</div >
             </div>
           </div>
         </div><!-- end 3 circles -->
