--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,7 +35,7 @@
 
           <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right top">
-              <li><%= link_to "HOME", '#' %></li>
+              <li><%= link_to "HOME", root_path %></li>
               <li><%= link_to "LINK" %></li>
               <li><%= link_to "LINK" %></li>
             </ul>
@@ -56,15 +56,15 @@
         <div class="col-md-10 col-md-offset-1">
           <div class="row">
             <div class="col-xs-2 col-sm-2 col-md-1">
-              <span class="glyphicon glyphicon-earphone"></span>
+              <span class="glyphicon glyphicon-earphone footerglyph"></span>
             </div>
             <div class="col-xs-10 col-sm-10 col-md-2 text"><b>Call</b><br/>T: 207-504-6930</div>
             <div class="col-xs-2 col-sm-2 col-md-1">
-              <span class="glyphicon glyphicon-envelope"></span>
+              <span class="glyphicon glyphicon-envelope footerglyph"></span>
             </div>
             <div class="col-xs-10 col-sm-10 col-md-2 text"><b>Contact</b><br/>lcfinnegan@gmail.com</div>
             <div class="col-xs-2 col-sm-2 col-md-1">
-              <span class="glyphicon glyphicon-plus"></span>
+              <span class="glyphicon glyphicon-plus footerglyph"></span>
             </div>
             <div class="col-xs-10 col-sm-10 col-md-2 text"><b>Social Media</b><br/>
                 <%= link_to image_tag("Linkedin.png", class: "img-responsive social-img"), "https://www.linkedin.com/in/larafinnegan", target: "_blank"  %>
@@ -73,7 +73,7 @@
                 <%= link_to image_tag("Googleplus.png", class: "img-responsive social-img"), "https://plus.google.com/u/0/+LaraFinnegan/posts", target: "_blank" %>
                 </div>
             <div class="col-xs-2 col-sm-2 col-md-1">
-              <span class="glyphicon glyphicon-copyright-mark"></span>
+              <span class="glyphicon glyphicon-copyright-mark footerglyph"></span>
             </div>
             <div class="col-xs-10 col-sm-10 col-md-2 text">© 2015 by Lara Finnegan</div>
           </div>
