--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,10 +46,14 @@
     </div><!-- end div class="container" -->
   </div> <!-- end div class="navbar navbar-default navbar-fixed-top" -->
 
+
   <div class="container main-container">
+  <div class="row outer">
+  <div class="col-md-10 col-md-offset-1">
     <%= yield %>
   </div><!-- /.container-fluid -->
-
+</div>
+</div>
   <div class="footer">
     <div class="container">
       <div class="row footer-main">
