--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,4 @@
-<div class="row outer">
-  <div class="col-md-10 col-md-offset-1">
+
 
     <div class="row">
       <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-push-6">
@@ -68,5 +67,4 @@
         </div>
       </div>
     </div><!-- end row -->
-  </div><!-- end outer column -->
-</div><!-- end outer row -->
+<!-- end outer row -->
