--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,70 +1,68 @@
+<div class="row">
+  <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-push-6">
+    <p class="main-greeting">Hello,</p>
+    <p class="smaller-greeting">a bit about me...</p>
 
-
-    <div class="row">
-      <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-md-push-6">
-        <p class="main-greeting">Hello,</p>
-        <p class="smaller-greeting">a bit about me...</p>
-        
-        <div class="row three">
-          <div class="col-md-12 col-xs-12 nopadding">
-            <div class="circle circle1">
-              <div class="circletext"><%= link_to "ABOUT", '#' %></div >
-            </div>
-            <div class="circle circle2">
-              <div class="circletext"><%= link_to "BLOG", blog_path %></div >
+    <div class="row three">
+      <div class="col-md-12 col-xs-12 nopadding">
+        <div class="circle circle1">
+          <div class="circletext"><%= link_to "ABOUT", '#' %></div >
+          </div>
+          <div class="circle circle2">
+            <div class="circletext"><%= link_to "BLOG", blog_path %></div >
             </div>
             <div class="circle circle3">
               <div class="circletext"><%= link_to "PROJECTS", projects_path %></div >
+              </div>
             </div>
+          </div><!-- end 3 circles -->
+
+          <div class="hidden-sm hidden-xs visible-md visible-lg about">
+            blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front ext goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text 
           </div>
-        </div><!-- end 3 circles -->
-              
-        <div class="hidden-sm hidden-xs visible-md visible-lg big about">
-            blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
-        </div>
-      </div><!-- end second column -->
-            
-      <div class="col-md-6 col-md-pull-6 big-circle">
-        <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+        </div><!-- end second column -->
 
-                <!-- Wrapper for slides -->
-          <div class="carousel-inner" role="listbox">
-            <div class="item active">
-              <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
-              <div class="carousel-caption">
-                <h3>Chania</h3>
-                <p>Caption 1</p>
+        <div class="col-md-6 col-md-pull-6 big-circle">
+          <div id="myCarousel" class="carousel slide carousel-fade" data-ride="carousel">
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
+                <div class="carousel-caption">
+                  <h3>Chania</h3>
+                  <p>Caption 1</p>
+                </div>
+              </div>
+
+              <div class="item">
+                <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
+                <div class="carousel-caption">
+                  <h3>Chania</h3>
+                  <p>Caption 2</p>
+                </div>
+              </div>
+
+              <div class="item">
+                <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
+                <div class="carousel-caption">
+                  <h3>Chania</h3>
+                  <p>Caption 1</p>
+                </div>
+              </div>
+
+              <div class="item">
+                <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
+                <div class="carousel-caption">
+                  <h3>Chania</h3>
+                  <p>Caption 1</p>
+                </div>
               </div>
             </div>
-
-            <div class="item">
-              <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
-              <div class="carousel-caption">
-                <h3>Chania</h3>
-                <p>Caption 2</p>
-              </div>
-            </div>
-
-            <div class="item">
-              <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
-              <div class="carousel-caption">
-                <h3>Chania</h3>
-                <p>Caption 1</p>
-              </div>
-            </div>
-
-            <div class="item">
-              <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
-              <div class="carousel-caption">
-                <h3>Chania</h3>
-                <p>Caption 1</p>
-              </div>
-            </div>
+          </div><!-- end carousel-->
+          <div class="about visible-sm visible-xs hidden-md hidden-lg">
+            blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front ext goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text 
           </div>
-        </div><!-- end carousel-->
-        <div class="about visible-sm visible-xs hidden-md hidden-lg">
-          blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr blah blah blah more text goes here blah blah ugh this is annoying blah blah designing a front page grrrr
         </div>
-      </div>
-    </div><!-- end row -->
+      </div><!-- end row -->
 <!-- end outer row -->
