--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,23 +2,23 @@
 @import "bootstrap";
 
 html {
-  position: relative;
-  min-height: 100%;
+  position:relative;
+  min-height:100%;
 }
 
 body {
+  margin-bottom: 110px;
   background-color: #e0e0e0;
-  height: 100%;
-  padding-bottom: 15%;
+}
+
+.main-container {
+  padding-top: 5%;
+  padding-bottom: 7%;
 }
 
 .navbar-default .navbar-toggle {
   border-color: white;
   background-color: #606060;
-}
-
-.outer {
-  padding-top: 5%;
 }
 
 /* carousel */
@@ -83,15 +83,13 @@ body {
 /* footer */
 
 .footer {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  height: 15%;
+  width:100%;
+  height:110px;
+  position:absolute;
+  bottom:0;
+  left:0;
   background-color: rgba(232, 53, 86, 1);
   border-top: 2px solid white;
-  margin-bottom: 0 !important;
-  padding-bottom: 0 !important;
 }
 
  .text {
@@ -172,6 +170,10 @@ body {
   background-color: rgba(139, 133, 25, 1);
 }
 
+  .three {
+    padding-bottom: 5%;
+  }
+
 .about {
   color: #606060;
   font-family: 'Open Sans', sans-serif;
@@ -197,13 +199,20 @@ body {
 .smaller-greeting {
   font-size: 3em;
 }
-
-.outer {
-  padding-bottom: 4%;
-}
 }
 
 @media (max-width: 978px){
+
+body {
+  margin-bottom: 190px;
+  }
+
+  .footer {
+    padding: 0 !important;
+    margin: 0 !important;
+    height: 190px;
+  }
+
   .navbar-nav li {
     text-align: left;
     border: 1px solid white;
@@ -220,8 +229,6 @@ body {
   }
 
   .name {
-    margin-left: 0;
-    padding-left: 2%;
     padding-top: 5%;
   }
 
@@ -237,27 +244,11 @@ body {
     left: -50%;
   }
 
-  .three {
-    padding-bottom: 5%;
-  }
-
   .about {
     padding-top: 8%;
-    padding-bottom: 6%;
-    margin-right: 2%;
-    margin-left: 2%;
-  }
-
-  .big-circle {
-    padding-bottom: 10%;
-  }
-
-  .footer-main {
-    margin-top: 3%;
-  }
-
-    .main-container {
-    padding-bottom: 15%;
+    margin-right: 3%;
+    margin-left: 3%;
+    text-align: justify;
   }
 }
 
@@ -287,10 +278,6 @@ body {
 
   .circle1 {
     margin-left: 0px;
-  }
-
-  .big {
-    padding-top: 9%;
   }
 
    .text {
