--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -6,7 +6,7 @@
     <div class="row three">
       <div class="col-md-12 col-xs-12 nopadding">
         <div class="circle circle1">
-          <div class="circletext"><%= link_to "ABOUT", '#' %></div >
+          <div class="circletext"><%= link_to "ABOUT", about_path %></div >
           </div>
           <div class="circle circle2">
             <div class="circletext"><%= link_to "BLOG", blog_path %></div >
