--- a/app/views/static_pages/projects.html.erb
+++ b/app/views/static_pages/projects.html.erb
@@ -2,7 +2,7 @@
 
         <!-- Project One -->
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-md-offset-1">
                 <a href="#">
                     <img class="img-responsive" src="http://placehold.it/700x300" alt="">
                 </a>
@@ -20,7 +20,7 @@
 
         <!-- Project Two -->
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-md-offset-1">
                 <a href="#">
                     <img class="img-responsive" src="http://placehold.it/700x300" alt="">
                 </a>
@@ -38,7 +38,7 @@
 
         <!-- Project Three -->
         <div class="row">
-            <div class="col-md-4">
+            <div class="col-md-4 col-md-offset-1">
                 <a href="#">
                     <img class="img-responsive" src="http://placehold.it/700x300" alt="">
                 </a>
@@ -57,7 +57,7 @@
         <!-- Project Four -->
         <div class="row">
 
-            <div class="col-md-4">
+            <div class="col-md-4 col-md-offset-1">
                 <a href="#">
                     <img class="img-responsive" src="http://placehold.it/700x300" alt="">
                 </a>
