--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,19 +1,10 @@
 
              <div class="row">
             <!-- Blog Entries Column -->
-            <div class="col-md-8">
-
-                <h1 class="page-header">
-                    Page Heading
-                    <small>Secondary Text</small>
-                </h1>
-
+            <div class="col-md-7 col-md-offset-1">
                 <% @posts.each do |post| %>
-                <h2><%= link_to post.title, post_path(post) %></h2>
-                <p class="lead">
-                    by <%= link_to post.user.name, about_path %>
-                </p>
-                <p><span class="glyphicon glyphicon-time"></span> Posted on <%= post.created_at %></p>
+                <h3><%= link_to post.title, post_path(post) %></h3>
+                <p><span class="glyphicon glyphicon-time"></span> Posted on <%= post.created_at.strftime("%b %d, %Y") %></p>
                 <hr>
                 <p><%= post.content %></p>
                 <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
