--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -36,7 +36,7 @@
               </div>
 
               <div class="item">
-                <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
+                <%= image_tag("yosemite.png", class: "img-responsive main-img img-circle") %>
                 <div class="carousel-caption">
                   <h3>Chania</h3>
                   <p>Caption 2</p>
@@ -52,7 +52,7 @@
               </div>
 
               <div class="item">
-                <%= image_tag("background8.png", class: "img-responsive main-img img-circle") %>
+                <%= image_tag("yosemite.png", class: "img-responsive main-img img-circle") %>
                 <div class="carousel-caption">
                   <h3>Chania</h3>
                   <p>Caption 1</p>
