--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,8 +5,7 @@
                 <% @posts.each do |post| %>
                 <h3><%= link_to post.title, post_path(post) %></h3>
                 <p><span class="glyphicon glyphicon-time"></span> Posted on <%= post.created_at.strftime("%b %d, %Y") %></p>
-                <hr>
-                <p><%= post.content %></p>
+                <p class="postbody"><%= post.content %></p>
                 <a class="btn btn-primary" href="#">Read More <span class="glyphicon glyphicon-chevron-right"></span></a>
 
                 <hr>
