--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,7 +21,7 @@
                 <!-- Comments Form -->
                     <div class="well">
                     <h4>Leave a Comment:</h4>
-                        <%= form_for [@post, @post.comments.build] do |f| %>
+                        <%= form_for [@post, @post.comments.new] do |f| %>
                         <div class="field">
                             <%= f.text_field :author %>
                         </div><br/>
@@ -37,11 +37,11 @@
                 <!-- Posted Comments -->
 
                 <!-- Comment -->
-                <% @post.comments.each do |comment| %>
+                <% @post.comments.find_each do |comment| %>
                 <div class="media">
                     <div class="media-body">
                         <h4 class="media-heading"><%= comment.author %>
-                            <small>replied <%= comment.inspect %><%= comment.created_at %></small>
+                            <small>replied at <%= comment.created_at.strftime("%b %d, %Y") %></small>
                         </h4>
                         <%= comment.content %>
                     </div>
