--- a/app/views/static_pages/projects.html.erb
+++ b/app/views/static_pages/projects.html.erb
@@ -8,10 +8,10 @@
                 </a>
             </div>
             <div class="col-md-6">
-                <h3>Project One</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium veniam exercitationem expedita laborum at voluptate. Labore, voluptates totam at aut nemo deserunt rem magni pariatur quos perspiciatis atque eveniet unde.</p>
+                <h3>Personal Website</h3>
+                <p>This website was my first attempt at a completed rails application, containing a blog, tags and comments functionality.  I used Bootstrap for a lot of the styling, but particularly for the home page (and to practice my CSS-fu), I wanted to move away from the standard 'Bootstrap' look and try something different.</p>
                 <a class="btn btn-primary" href="#">View Project <span class="glyphicon glyphicon-chevron-right"></span></a>
-                <a class="btn btn-primary" href="#">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
+                <a class="btn btn-primary" href="https://github.com/larafinnegan/site" target="_blank">View Source Code <span class="glyphicon glyphicon-chevron-right"></span></a>
             </div>
         </div>
         <!-- /.row -->
