cleaned up some duplicated html into a partial

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -22,6 +22,16 @@ body {
   overflow: hidden;
 }
 
+.button-text-color {
+  color: white;
+  text-decoration: none;
+}
+
+.button-text-color:hover {
+  color: white;
+  text-decoration: none;
+}
+
 .btn-primary {
   background-color: rgba(232, 53, 86, 1);
   border: none;
@@ -33,6 +43,11 @@ body {
 
 .btn-primary:hover {
   background-color: #a2253c;
+}
+
+.btn-primary:focus {
+  background-color: #a2253c;
+  outline: none !important;
 }
 
 .navbar-default .navbar-toggle {
